{
  "version": 4,
  "terraform_version": "0.12.31",
  "serial": 120,
  "lineage": "a5cb2df2-2ca2-c5c4-914b-272c927a9939",
  "resources": [
    {
      "module": "module.sak_kubeflow.module.cert_manager",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:vpc/vpc-0503cb09e8aad6d2f",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fffffb27da3e1eea",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-5b85d223",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0503cb09e8aad6d2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-083c410f24ca7612f",
            "owner_id": "641456973426",
            "state": "available",
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito",
              "Project": "Kubeflow",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.external_dns",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:vpc/vpc-0503cb09e8aad6d2f",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fffffb27da3e1eea",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-5b85d223",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0503cb09e8aad6d2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-083c410f24ca7612f",
            "owner_id": "641456973426",
            "state": "available",
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito",
              "Project": "Kubeflow",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00a1491d47a8a5376",
            "public_dns": "ec2-44-236-31-45.us-west-2.compute.amazonaws.com",
            "public_ip": "44.236.31.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito",
              "Project": "Kubeflow",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-08e4ac91df1567cdc",
            "owner_id": "641456973426",
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito",
              "Project": "Kubeflow",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a1491d47a8a5376",
            "id": "nat-0c641466805997416",
            "network_interface_id": "eni-0903028fac3bd1d37",
            "private_ip": "10.10.0.171",
            "public_ip": "44.236.31.45",
            "subnet_id": "subnet-0e4d108531bfed69b",
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito",
              "Project": "Kubeflow",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_eip.nat",
            "module.sak_kubeflow.module.network.module.vpc.aws_internet_gateway.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_subnet.public",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f99a4c8e2749a761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0c641466805997416",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f99a4c8e2749a76",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_eip.nat",
            "module.sak_kubeflow.module.network.module.vpc.aws_internet_gateway.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_nat_gateway.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_route_table.private",
            "module.sak_kubeflow.module.network.module.vpc.aws_subnet.public",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08e4ac91df1567cdc",
            "id": "r-rtb-003cd9a9b50b768b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003cd9a9b50b768b7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_internet_gateway.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_route_table.public",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06f99a4c8e2749a76",
            "owner_id": "641456973426",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito",
              "Project": "Kubeflow",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-003cd9a9b50b768b7",
            "owner_id": "641456973426",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito",
              "Project": "Kubeflow",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e14ad9fb6505b8d",
            "route_table_id": "rtb-06f99a4c8e2749a76",
            "subnet_id": "subnet-0abea3994a93cbc27"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_route_table.private",
            "module.sak_kubeflow.module.network.module.vpc.aws_subnet.private",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ebc516ec90fecd",
            "route_table_id": "rtb-06f99a4c8e2749a76",
            "subnet_id": "subnet-0fec41c314798d8cc"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_route_table.private",
            "module.sak_kubeflow.module.network.module.vpc.aws_subnet.private",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042fc163d079d6490",
            "route_table_id": "rtb-003cd9a9b50b768b7",
            "subnet_id": "subnet-0e4d108531bfed69b"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_route_table.public",
            "module.sak_kubeflow.module.network.module.vpc.aws_subnet.public",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd09ba270956b6e1",
            "route_table_id": "rtb-003cd9a9b50b768b7",
            "subnet_id": "subnet-019358ded1340ce6b"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_route_table.public",
            "module.sak_kubeflow.module.network.module.vpc.aws_subnet.public",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:security-group/sg-0303636fd233210b2",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0303636fd233210b2",
            "ingress": [],
            "name": "testcognito20210506080807888600000005",
            "name_prefix": "testcognito",
            "owner_id": "641456973426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "Name": "testcognito-eks_cluster_sg",
              "Project": "Kubeflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:security-group/sg-00b2e628e13f04b57",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-00b2e628e13f04b57",
            "ingress": [],
            "name": "testcognito20210506085838187900000008",
            "name_prefix": "testcognito",
            "owner_id": "641456973426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "Name": "testcognito-eks_worker_sg",
              "Project": "Kubeflow",
              "kubernetes.io/cluster/testcognito": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-707957350",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0303636fd233210b2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1036128635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0303636fd233210b2",
            "self": false,
            "source_security_group_id": "sg-00b2e628e13f04b57",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.workers",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-4137871096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b2e628e13f04b57",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.workers",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-911602828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b2e628e13f04b57",
            "self": false,
            "source_security_group_id": "sg-0303636fd233210b2",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.workers",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3009789864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b2e628e13f04b57",
            "self": false,
            "source_security_group_id": "sg-0303636fd233210b2",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.workers",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": []
    },
    {
      "module": "module.sak_kubeflow.module.kubernetes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1139754388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b2e628e13f04b57",
            "self": false,
            "source_security_group_id": "sg-00b2e628e13f04b57",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.workers",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:subnet/subnet-0abea3994a93cbc27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.200.0/24",
            "id": "subnet-0abea3994a93cbc27",
            "map_public_ip_on_launch": false,
            "owner_id": "641456973426",
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito-private",
              "Project": "Kubeflow",
              "Terraform": "true",
              "kubernetes.io/cluster/testcognito": "shared"
            },
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:subnet/subnet-0fec41c314798d8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.201.0/24",
            "id": "subnet-0fec41c314798d8cc",
            "map_public_ip_on_launch": false,
            "owner_id": "641456973426",
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito-private",
              "Project": "Kubeflow",
              "Terraform": "true",
              "kubernetes.io/cluster/testcognito": "shared"
            },
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:subnet/subnet-0e4d108531bfed69b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-0e4d108531bfed69b",
            "map_public_ip_on_launch": true,
            "owner_id": "641456973426",
            "tags": {
              "Environment": "testing",
              "KubernetesCluster": "testcognito",
              "Name": "testing-testcognito-public",
              "Project": "Kubeflow",
              "Terraform": "true",
              "kubernetes.io/cluster/testcognito": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:subnet/subnet-019358ded1340ce6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-019358ded1340ce6b",
            "map_public_ip_on_launch": true,
            "owner_id": "641456973426",
            "tags": {
              "Environment": "testing",
              "KubernetesCluster": "testcognito",
              "Name": "testing-testcognito-public",
              "Project": "Kubeflow",
              "Terraform": "true",
              "kubernetes.io/cluster/testcognito": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-0503cb09e8aad6d2f"
          },
          "dependencies": [
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:641456973426:vpc/vpc-0503cb09e8aad6d2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f973fa7ebc088a53",
            "default_route_table_id": "rtb-083c410f24ca7612f",
            "default_security_group_id": "sg-0c319b4b876a9ad50",
            "dhcp_options_id": "dopt-5b85d223",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0503cb09e8aad6d2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-083c410f24ca7612f",
            "owner_id": "641456973426",
            "tags": {
              "Environment": "testing",
              "Name": "testing-testcognito",
              "Project": "Kubeflow",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.aws"
    },
    {
      "module": "module.sak_kubeflow.module.cert_manager",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "module.sak_kubeflow.provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "4535",
                "self_link": "/api/v1/namespaces/cert-manager",
                "uid": "2da921d9-7bab-4696-982e-64a105c7187c"
              }
            ]
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.aws_iam_openid_connect_provider.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_autoscaling_group.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_autoscaling_group.workers_launch_template",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_cloudwatch_log_group.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_instance_profile.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role.cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_launch_configuration.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_launch_template.workers_launch_template",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.cluster_private_access",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_egress_internet",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_ingress_self",
            "module.sak_kubeflow.module.kubernetes.module.eks.kubernetes_config_map.aws_auth",
            "module.sak_kubeflow.module.kubernetes.module.eks.local_file.kubeconfig",
            "module.sak_kubeflow.module.kubernetes.module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.module.node_groups.random_pet.node_groups",
            "module.sak_kubeflow.module.kubernetes.module.eks.null_resource.wait_for_cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.random_pet.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.random_pet.workers_launch_template",
            "module.sak_kubeflow.module.network.module.vpc.aws_subnet.private",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.cluster_autoscaler",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.kubernetes"
    },
    {
      "module": "module.sak_kubeflow.module.external_dns",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "each": "list",
      "provider": "module.sak_kubeflow.provider.kubernetes"
    },
    {
      "module": "module.sak_kubeflow.module.alb_ingress",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "module.sak_kubeflow.provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-system",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-system",
                "resource_version": "4536",
                "self_link": "/api/v1/namespaces/ingress-system",
                "uid": "4d1ba39a-34da-4fdd-8b1c-4bb360d3ec69"
              }
            ]
          },
          "dependencies": [
            "module.sak_kubeflow.module.kubernetes.aws_iam_openid_connect_provider.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_autoscaling_group.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_autoscaling_group.workers_launch_template",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_cloudwatch_log_group.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_eks_cluster.this",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_instance_profile.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_instance_profile.workers_launch_template",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role.cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.workers_AmazonEC2ContainerRegistryReadOnly",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKSWorkerNodePolicy",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.workers_AmazonEKS_CNI_Policy",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_iam_role_policy_attachment.workers_additional_policies",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_launch_configuration.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_launch_template.workers_launch_template",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.cluster_egress_internet",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.cluster_https_worker_ingress",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.cluster_private_access",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_egress_internet",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_ingress_cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_ingress_cluster_https",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_ingress_cluster_kubelet",
            "module.sak_kubeflow.module.kubernetes.module.eks.aws_security_group_rule.workers_ingress_self",
            "module.sak_kubeflow.module.kubernetes.module.eks.kubernetes_config_map.aws_auth",
            "module.sak_kubeflow.module.kubernetes.module.eks.local_file.kubeconfig",
            "module.sak_kubeflow.module.kubernetes.module.eks.module.node_groups.aws_eks_node_group.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.module.node_groups.random_pet.node_groups",
            "module.sak_kubeflow.module.kubernetes.module.eks.null_resource.wait_for_cluster",
            "module.sak_kubeflow.module.kubernetes.module.eks.random_pet.workers",
            "module.sak_kubeflow.module.kubernetes.module.eks.random_pet.workers_launch_template",
            "module.sak_kubeflow.module.network.module.vpc.aws_subnet.private",
            "module.sak_kubeflow.module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sak_kubeflow.module.argocd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "module.sak_kubeflow.provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "4404",
                "self_link": "/api/v1/namespaces/argocd",
                "uid": "a1213040-0782-4782-8883-624416d41741"
              }
            ]
          }
        }
      ]
    }
  ]
}